--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/react.svg" />
+    <link rel="icon" type="image/svg+xml" href="/my-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Print Page</title>
+    <meta name="author" content="Trevor Kiprop" />
+    <meta name="description" content="Portfolio shopping website" />
+    <meta property="og:locale" content="en_KE" />
+    <meta httpEquiv="content-language" content="en-KE" />
   </head>
   <body>
     <div id="root" class="h-screen bg-[var(--background)]"></div>
