email verification, metadata and robots

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="author" content="Trevor Kiprop" />
     <meta name="description" content="Portfolio shopping website" />
     <meta property="og:locale" content="en_KE" />
+    <meta
+      name="google-site-verification"
+      content="google-site-verification=YtK4bPYvx5XbMqGqKqFgvkh3hxW6cQiMbj_X6rSSDwE"
+    />
+
     <meta httpEquiv="content-language" content="en-KE" />
   </head>
   <body>
